# djangosaml2idp

./: CODEOWNERS  README.rst  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
example_setup/idp/: requirements.txt
example_setup/sp/: requirements.txt
tests/: test_forms.py  test_utils.py
