[bdist_wheel]
universal = 1

[metadata]
description_file = README.md
license_file = LICENSE.txt

[aliases]
test = pytest

[pylama]
linters = pycodestyle,pyflakes,mccabe
ignore = E122,E127,E128,E131,W191,E501,C0111,C0301,W191,C901
skip =
    build/*,
    dist/*,
    docs/*,
    */manage.py,
    *migrations*,
    venv/*

[pep8]
ignore = C0111,C0301,E122,E127,E128,E131,E501,E502,E722,E731,W605

[mypy]
ignore_missing_imports = True

[mypy-djangosaml2idp.migrations.*]
ignore_errors = True

[tool:pytest]
addopts =
    -rX
    --cov=djangosaml2idp
    --cov-report=term-missing
    --cov-report=xml:cov.xml
django_find_project = false
norecursedirs = env
testpaths = tests/
DJANGO_SETTINGS_MODULE = tests.settings

[coverage:run]
omit =
    */migrations/*

[tox:tox]
envlist =
    py{3.9,3.10,3.11,3.12,3.13}-django{4.2,5.1,5.2}
    format
    typing

[testenv]
extras = testing
deps =
    setuptools
    pytest
    pytest-django
    pytest-cov
    pytest-pythonpath
    pytest-mock
    requests-mock
    django3.2: django~=4.2
    django5.1: django~=5.1
    django5.2: django~=5.2
commands =
    pip list
    pytest

[testenv:format]
skipsdist = True
deps = pylama
commands = pylama djangosaml2idp

[testenv:typing]
ignore_outcome = True
skipsdist = True
deps =
    mypy
    django-stubs
commands =
    pip list
    mypy djangosaml2idp
